image fix
fixed images not showing up with the help of chatgpt

--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,9 @@ footer {
 footer p {
     margin: 0;
 }
+
+section img {
+    width: 45%;
+    display: inline-block;
+    vertical-align: top;
+}
